tests/toylang/neg/001205_mutation.toylang
program a = { program while a do sleep; } .
